Update Bootstrap version

--- a/TBOAdmin/Views/Shared/_Header.cshtml
+++ b/TBOAdmin/Views/Shared/_Header.cshtml
@@ -1,23 +1,26 @@
-﻿<nav class="navbar navbar-inverse navbar-fixed-top">
-  <div class="container">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-      <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">TBOAdmin</a>
-    </div>
-    <div class="navbar-collapse collapse">
-      <ul class="nav navbar-nav">
-        <li><a asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="About">Contact</a></li>
-        <li><a asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
-      </ul>
-      <ul class="nav navbar-nav">
-        <li><a asp-area="" asp-controller="Home" asp-action="Profile">Profile</a></li>
-      </ul>
-    </div>
+﻿<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Dashboard</a>
+  <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarContent" aria-controls="navbarContent" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="navbar-collapse collapse" id="navbarContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Users" asp-action="Index">Users</a></li>
+      <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a></li>
+      <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="About">About</a></li>
+      <li class="nav-item"><a class="nav-link" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a></li>
+    </ul>
+    <ul class="navbar-nav ml-auto">
+      <li class="nav-item dropdown">
+        <a class="nav-link dropdown-toggle" href="#" id="authDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          Auth
+        </a>
+        <div class="dropdown-menu dropdown-menu-right bg-dark" aria-labelledby="authDropdown">
+          <a class="dropdown-item text-light" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+          <div class="dropdown-divider"></div>
+          <a class="dropdown-item text-light" asp-area="" asp-controller="Home" asp-action="Login">Logout</a>
+        </div>
+      </li>
+    </ul>
   </div>
 </nav>
