--- a/TBOAdmin/Views/Shared/_Script.cshtml
+++ b/TBOAdmin/Views/Shared/_Script.cshtml
@@ -1,6 +1,6 @@
 ﻿<environment include="Development">
   <script src="~/lib/jquery/dist/jquery.js"></script>
-  <script src="~/lib/bootstrap/dist/js/bootstrap.js"></script>
+  <script src="~/lib/bootstrap-4.3.1-dist/js/bootstrap.js"></script>
   <script src="~/js/site.js" asp-append-version="true"></script>
 </environment>
 <environment exclude="Development">
@@ -10,8 +10,8 @@
           crossorigin="anonymous"
           integrity="sha384-tsQFqpEReu7ZLhBV2VZlAu7zcOV+rXbYlF2cqB8txI/8aZajjp4Bqd+V6D5IgvKT">
   </script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"
-          asp-fallback-src="~/lib/bootstrap/dist/js/bootstrap.min.js"
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+          asp-fallback-src="~/lib/bootstrap-4.3.1-dist/js/bootstrap.min.js"
           asp-fallback-test="window.jQuery && window.jQuery.fn && window.jQuery.fn.modal"
           crossorigin="anonymous"
           integrity="sha384-aJ21OjlMXNL5UyIl/XNwTMqvzeRMZH2w8c5cRVpzpU8Y5bApTppSuUkhZXN0VxHd">
