--- a/TBOAdmin/Views/Shared/_Stylesheet.cshtml
+++ b/TBOAdmin/Views/Shared/_Stylesheet.cshtml
@@ -1,10 +1,10 @@
 ﻿<environment include="Development">
-  <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.css" />
+  <link rel="stylesheet" href="~/lib/bootstrap-4.3.1-dist/css/bootstrap.css" />
   <link rel="stylesheet" href="~/css/site.css" />
 </environment>
 <environment exclude="Development">
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css"
-        asp-fallback-href="~/lib/bootstrap/dist/css/bootstrap.min.css"
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+        asp-fallback-href="~/lib/bootstrap-4.3.1-dist/css/bootstrap.min.css"
         asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute" />
   <link rel="stylesheet" href="~/css/site.min.css" asp-append-version="true" />
 </environment>
