--- a/TBOAdmin/Views/Users/Create.cshtml
+++ b/TBOAdmin/Views/Users/Create.cshtml
@@ -28,7 +28,7 @@
                 <span asp-validation-for="LastName" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-default" />
+                <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
