--- a/TBOAdmin/Views/Home/Index.cshtml
+++ b/TBOAdmin/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
       <img class="d-block w-100 img-responsive" src="~/images/banner1.svg" alt="ASP.NET" />
       <div class="carousel-caption d-none d-md-block" role="option">
         <p>
-          Learn how to build ASP.NET apps that can run anywhere.
+          Learn how to build ASP.NET apps that can run anywhere.<br/>
           <a class="btn btn-dark" href="https://go.microsoft.com/fwlink/?LinkID=525028&clcid=0x409">
             Learn More
           </a>
@@ -24,7 +24,7 @@
       <img class="d-block w-100 img-responsive" src="~/images/banner2.svg" alt="Visual Studio" />
       <div class="carousel-caption d-none d-md-block" role="option">
         <p>
-          There are powerful new features in Visual Studio for building modern web apps.
+          There are powerful new features in Visual Studio for building modern web apps.<br />
           <a class="btn btn-dark" href="https://go.microsoft.com/fwlink/?LinkID=525030&clcid=0x409">
             Learn More
           </a>
@@ -35,7 +35,7 @@
       <img class="d-block w-100 img-responsive" src="~/images/banner3.svg" alt="Microsoft Azure" />
       <div class="carousel-caption d-none d-md-block" role="option">
         <p>
-          Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.
+          Learn how Microsoft's Azure cloud platform allows you to build, deploy, and scale web apps.<br />
           <a class="btn btn-dark" href="https://go.microsoft.com/fwlink/?LinkID=525027&clcid=0x409">
             Learn More
           </a>
