--- a/TBOAdmin/Views/Shared/_Header.cshtml
+++ b/TBOAdmin/Views/Shared/_Header.cshtml
@@ -15,10 +15,10 @@
         <a class="nav-link dropdown-toggle" href="#" id="authDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Auth
         </a>
-        <div class="dropdown-menu dropdown-menu-right bg-dark" aria-labelledby="authDropdown">
-          <a class="dropdown-item text-light" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
-          <div class="dropdown-divider"></div>
-          <a class="dropdown-item text-light" asp-area="" asp-controller="Home" asp-action="Login">Logout</a>
+        <div class="dropdown-menu dropdown-menu-right" aria-labelledby="authDropdown">
+          <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Login">Login</a>
+          <div class="dropdown-divider" />
+          <a class="dropdown-item" asp-area="" asp-controller="Home" asp-action="Logout">Logout</a>
         </div>
       </li>
     </ul>
